# Alpaca

./: .flake8  .gitignore  Dockerfile  LICENSE  mypy.ini  pyproject.toml  requirements.txt
src/: alpaca.py  main.py
src/utils/: logger.py
